--- a/.github/workflows/build-with-lume.yml
+++ b/.github/workflows/build-with-lume.yml
@@ -4,7 +4,14 @@ jobs:
   Build:
     runs-on: ubuntu-latest
     steps:
-      - uses: denoland/setup-deno@v1
+      - name: Build
+        uses: denoland/setup-deno@v1
         with:
           deno-version: vx.x.x
-      - run: deno run -A https://deno.land/x/lume/ci.ts
+        run: deno run -A https://deno.land/x/lume/ci.ts
+      
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          branch: gh-pages
+          folder: _site
