--- a/.github/workflows/build-with-lume.yml
+++ b/.github/workflows/build-with-lume.yml
@@ -1,7 +1,5 @@
 name: build-with-lume
-on: 
-  branches:
-    - main
+on: [push]
 jobs:
   Build:
     runs-on: ubuntu-latest
@@ -11,10 +9,7 @@ jobs:
         with:
           deno-version: vx.x.x
         run: deno run -A https://deno.land/x/lume/ci.ts
-<<<<<<< HEAD
-=======
-      
->>>>>>> 8502b43387a8eed0af641cba43aee48db8042725
+        
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
