--- a/.github/workflows/build-with-lume.yml
+++ b/.github/workflows/build-with-lume.yml
@@ -4,14 +4,16 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Build
-      - uses: denoland/setup-deno@v1
+      - name: Get Deno
+        uses: denoland/setup-deno@v1
         with:
           deno-version: vx.x.x
-      - run: deno run -A https://deno.land/x/lume/ci.ts
+      
+      - name: Build
+        run: deno run -A https://deno.land/x/lume/ci.ts
 
       - name: Deploy 🚀
-      - uses: JamesIves/github-pages-deploy-action@4.1.4
+        uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
           branch: gh-pages
           folder: _site
